--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 				margin: 0 0 0 0;
 			}
 
+			@media print {    
+				.no-print, .no-print * {
+					display: none !important;
+				}
+			}
+
 			body {
 				margin: 0 0 0 0;
 			}
@@ -27,7 +33,15 @@ function in2px(sizeIn, sizePx, value) {
 	return scaled;
 }
 
-function draw() {
+function drawMenu() {
+	var menu = document.getElementById("menu");
+	var canvas = document.getElementById("canvas");
+	menu.style.top = canvas.roi.top - menu.clientHeight-2;
+	menu.style.left = canvas.roi.left-2;
+	menu.style.width = canvas.roi.width+1;
+}
+
+function drawCanvas() {
 	var canvas = document.getElementById("canvas");
 
 	// resize to inches
@@ -45,9 +59,9 @@ function draw() {
 
 	canvas.roi.context = context;
 	canvas.roi.left = inX(canvas, 1+(1/16));
-	canvas.roi.top = canvas.height / 2;
+	canvas.roi.top = canvas.height / 2 - inY(canvas, 3);
 	canvas.roi.right = canvas.width - inX(canvas, 1+(1/16));
-	canvas.roi.bottom = canvas.height / 2 + inY(canvas, 3);
+	canvas.roi.bottom = canvas.height / 2;
 	canvas.roi.width = canvas.roi.right - canvas.roi.left;
 	canvas.roi.height = canvas.roi.bottom - canvas.roi.top;
 
@@ -112,16 +126,50 @@ function addImageUI(canvas) {
 
 function drawImage(canvas) {
 	console.log("Offset: ", canvas.image.offsetX, canvas.image.offsetY);
-	canvas.roi.context.drawImage(canvas.image, canvas.roi.left-canvas.image.offsetX, canvas.roi.top-canvas.image.offsetY);
+	canvas.roi.context.clearRect(canvas.roi.left, canvas.roi.top, canvas.roi.width, canvas.roi.height);
+	if(canvas.roi.fit) {
+		canvas.roi.context.drawImage(canvas.image, canvas.roi.left-canvas.image.offsetX, canvas.roi.top-canvas.image.offsetY, canvas.roi.width, canvas.roi.height);
+	} else {
+		canvas.roi.context.drawImage(canvas.image, canvas.roi.left-canvas.image.offsetX, canvas.roi.top-canvas.image.offsetY);
+	}
 }
 
 function loadImage(canvas, url) {
 	canvas.image.src = url;
 }
 
+function centerImage() {
+	var canvas = document.getElementById("canvas");
+	canvas.image.offsetX = canvas.roi.width/2;
+	canvas.image.offsetY = canvas.roi.height/2;
+	drawImage(canvas);
+}
+
+function toggleFit() {
+	var canvas = document.getElementById("canvas");
+	canvas.image.offsetX = 0;
+	canvas.image.offsetY = 0;
+	canvas.roi.fit = !canvas.roi.fit;
+	drawImage(canvas);
+}
+
+function init() {
+	drawCanvas();
+	drawMenu();
+}
+
 		</script>
 	</head>
-	<body onload="draw()">
+	<body onload="init()">
+		<div id="menu" class="no-print" style="position: absolute; display: inline-flex; border: 1px dotted black;">
+			<div style="width: 100%"></div>
+			<div style="cursor: pointer">Reset</div>
+			<div style="width: 100%"></div>
+			<div style="cursor: pointer" onClick="centerImage()">Center</div>
+			<div style="width: 100%"></div>
+			<div style="cursor: pointer" onClick="toggleFit()">Fit</div>
+			<div style="width: 100%"></div>
+		</div>
 		<canvas id="canvas" style="width: 8.5in; height: 11in; margin: 0 0 0 0;"></canvas>
 	</body>
 </html>
