--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ function drawCanvas() {
 
 function addImageUI(canvas) {
 	canvas.image = new Image();
+	canvas.image.crossOrigin = "anonymous";
 
 	canvas.image.addEventListener('load', function() {
 		canvas.image.offsetX = 0;
