--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@ function loadImageFromInput() {
 }
 
 function loadImage(canvas, url) {
+	console.log("Loading", url);
 	canvas.image.src = url;
 }
 
